--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 
 <body>
 
+	<script src="js/kartan.js"></script>
 	<script src="js/leaflet.js"></script>
 	<script src="js/leaflet.draw.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/langeland.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	
-	<div id="header" class="navbar-default navbar-fixed-top">
+<div id="header" class="navbar-default navbar-fixed-top">
 		<div class="navbar-header col-md-2" >
-			<a class="navbar-brand" href="#"></a>
+			<a class="navbar-brand" href="#">Cloudy-dev</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="#">Home</a></li>
+				<li><a href="#"></a></li>
 			</ul>
 		</div>
 	</div>
 	<div id="wrapper">
 		<div id="sidebar" class="col-lg-2">
-			<ul class="nav list-group">
-				<li><a class="list-group-item" href="#">Overview</a></li>
+			<ul class="nav list-group" id="resultlist">
+			
 			</ul>
 		</div>
 	 
@@ -50,25 +50,61 @@
 		var h = $(window).height(), offsetTop = 50;
 		$('#map').css('height', h-offsetTop);
 	}).resize();
-
-	var map = L.map('map', {drawControl: true}).setView([51.505, -0.09], 13);
-
-	// add an OpenStreetMap tile layer
-	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-		attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-	}).addTo(map);
-
-
+	
+	K.addMap('map');
+	K.addGeoJsonLayer();
+	
+	
+	
 	$.getJSON('scripts/gettable.php', function (data) {
-
+		
+		var list = document.getElementById('resultlist');
+		
 		for (var i=0; i<data.length; i++) {
-			L.geoJson(JSON.parse(data[i][2])).addTo(map);
+			K.addData(data[i]);
+			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
+
 		}
 		
 	});
+	
+	
+	/*
+	var map = L.map('map', {drawControl: true}).setView([51.505, -0.09], 13);
+	
+	
+	createDataMap();
+	
+	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+	}).addTo(map);
+	
+
+	$.getJSON('scripts/gettable.php', function (data) {
+		
+		var list = document.getElementById('resultlist');
+		
+		for (var i=0; i<data.length; i++) {
+			addData(data[i]);
+			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
+
+		}
+		
+	});
+	
+	
+	function clickItem(id) {
+		console.log('test');
+		console.log(getLeafletObject(id));
+		//navigateTo(id);
+		//getInfo(id); => dropdown list
+	}
+	*/
+	//Open3DViewer
 	</script>
 
 
 </body>
 
 </html>
+
