--- a/pointview.html
+++ b/pointview.html
@@ -68,7 +68,7 @@
 				$.ajax({
 					 async: true,
 					 type: 'GET',
-					 url: 'scripts/getcloud.php',
+					 url: 'scripts/getpartofcloud.php',
 					 success: function(indata) {
 						data = JSON.parse(indata);
 						k = loadPointData(data);
