--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
 	K.addMap('map');
 	K.addGeoJsonLayer();
 	
-	
-	
 	$.getJSON('scripts/gettable.php', function (data) {
 		
 		var list = document.getElementById('resultlist');
@@ -68,31 +66,55 @@
 		
 	});
 	
-	
-	/*
-	var map = L.map('map', {drawControl: true}).setView([51.505, -0.09], 13);
-	
-	
-	createDataMap();
-	
-	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-		attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-	}).addTo(map);
-	
-
-	$.getJSON('scripts/gettable.php', function (data) {
+	$.getJSON('scripts/getsubsea.php', function (data) {
 		
 		var list = document.getElementById('resultlist');
 		
 		for (var i=0; i<data.length; i++) {
-			addData(data[i]);
+			K.addData(data[i]);
 			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
 
 		}
 		
 	});
 	
+	$.getJSON('scripts/getrigs.php', function (data) {
+		
+		var list = document.getElementById('resultlist');
+		
+		for (var i=0; i<data.length; i++) {
+			K.addData(data[i]);
+			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
+
+		}
+		
+	});
 	
+	/*
+	$.getJSON('scripts/getbalder.php', function (data) {
+		
+		var list = document.getElementById('resultlist');
+		
+		for (var i=0; i<data.length; i++) {
+			K.addData(data[i]);
+			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
+
+		}
+		
+	});
+	*/
+	
+	function buildParameters(id, outline) {
+		
+		var params = '';
+		params += 'id='+id;
+		params += '&outline='+outline;
+		
+		return params;
+	}
+
+	
+	/*
 	function clickItem(id) {
 		console.log('test');
 		console.log(getLeafletObject(id));
