Extraction of WKT + circle
Adds a lot of poory written code for extracting the circle geometry.

--- a/pointview.html
+++ b/pointview.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>iSurvey</title>
+	<title>Cloudy-dev</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -12,39 +12,34 @@
 
 <body>
 
-
-  <script src="js/three.js"></script>
-  <script src="js/OrbitControls.js"></script>
-  <script src="js/pointloader.js"></script>
-  
+	<script src="js/three.js"></script>
+	<script src="js/OrbitControls.js"></script>
+	<script src="js/pointloader.js"></script>
 	<script src="js/leaflet.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	
-	<div id="header" class="navbar navbar-default navbar-fixed-top">
+
+	<div id="header" class="navbar-default navbar-fixed-top">
 		<div class="navbar-header col-md-2" >
-			<img id="logo" src="../images/isas.png"></img>
-			<a class="navbar-brand" href="#">iSurvey</a>
+			<a class="navbar-brand" href="#">Cloudy-dev</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="../">Home</a></li>
+				<li><a href="#"></a></li>
 			</ul>
 		</div>
 	</div>
-<div id="wrapper">
+	
+	<div id="wrapper">
 	<div id="main-wrapper" class="col-md-2">
 		<ul class="nav navbar-nav">
 		</ul>
 	</div>
 	<div id="main-wrapper" class="col-md-10">
 		<div id="pointview">
-		 
-		 
-		  
-		  </div>
+		</div>
 	</div>
-</div>
+	</div>
 
 
   <script>
