--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<script src="js/leaflet.js"></script>
 	<script src="js/leaflet.draw.js"></script>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/cloudy.js"></script>
+	<script src="js/Cloudy.js"></script>
+	<script src="js/Cloudy.Data.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	
 	<div id="header" class="navbar-default navbar-fixed-top">
@@ -51,9 +52,12 @@
 		$('#map').css('height', h-offsetTop);
 	}).resize();
 	
-	cloudy = new Cloud('map');
+	var map = L.map('map').setView([56.9648487562327, 1.8675290264099], 8);
+	map.addLayer(L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'}));
 	
 	
+	var cloudy = new Cloudy(map);
+	var cloudyData = new Cloudy.Data();
 	$.getJSON('scripts/gettable.php', function (data) {
 		
 		var list = $("#resultlist");
@@ -65,58 +69,10 @@
 				dbid : data[i][0]
 			};
 			
-			cloudy.addMapObject(item, list);
+			cloudyData.test();
 		}
 		
 	});
-	/*
-	$.getJSON('scripts/getsubsea.php', function (data) {
-		
-		var list = document.getElementById('resultlist');
-		
-		for (var i=0; i<data.length; i++) {
-			K.addData(data[i]);
-			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
-
-		}
-		
-	});
-	
-	$.getJSON('scripts/getrigs.php', function (data) {
-		
-		var list = document.getElementById('resultlist');
-		
-		for (var i=0; i<data.length; i++) {
-			K.addData(data[i]);
-			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
-
-		}
-		
-	});
-	
-	$.getJSON('scripts/getbalder.php', function (data) {
-		
-		var list = document.getElementById('resultlist');
-		
-		for (var i=0; i<data.length; i++) {
-			K.addData(data[i]);
-			list.innerHTML = list.innerHTML + ' <li><a onclick="clickItem(' + data[i][0] + ');">'+	data[i][1] + '</a></li>';
-
-		}
-		
-	});
-	
-	function buildParameters(id, outline) {
-		
-		var params = '';
-		params += 'id='+id;
-		params += '&outline='+outline;
-		
-		return params;
-	}
-
-	*/
-	
 	</script>
 
 
